refactor: clean up project structure and improve naming conventions
Breaking Changes:
- Rename Docs/ to docs/ for better readability
- Rename all documentation files to lowercase with hyphens
  - API.md -> api.md
  - ARCHITECTURE.md -> architecture.md
  - CHANGELOG.md -> changelog.md
  - DATABASE.md -> database.md
  - DATA_LAYER.md -> data-layer.md
  - DIFY_SETUP.md -> dify-setup.md
  - ML_MODELS.md -> ml-models.md
  - README.md -> readme.md

Removed Files:
- 项目概览.md (development conversation log, not for production)
- .DS_Store files (macOS system files)
- backend/.env (sensitive config, use .env.example instead)
- backend/database/healthai.db (test database, should be generated locally)
- __pycache__/ directories (Python cache files)
- frontend/README.md (default Vite template, not relevant)

Updated:
- .gitignore: exclude entire dify/ directory (use Docker Compose)
- README.md: update all documentation links to new lowercase names

This cleanup improves:
- File naming consistency (lowercase with hyphens)
- Repository cleanliness (no dev artifacts)
- Security (no sensitive files committed)
- Documentation clarity

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ env/
 # Node
 node_modules/
 npm-debug.log*
+dify/bug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
@@ -56,9 +57,8 @@ logs/
 .env.local
 .env.*.local
 
-# Dify
-dify/docker/volumes/
-dify/docker/.env
+# Dify (entire directory - use Docker Compose instead)
+dify/
 
 # Temporary files
 *.tmp
